fix(plugins/plugin-client-common): in PatternFly Light theme, status stripe hovers and borders are not visible
Fixes #6324

--- a/plugins/plugin-client-common/web/scss/components/StatusStripe/StatusStripe.scss
+++ b/plugins/plugin-client-common/web/scss/components/StatusStripe/StatusStripe.scss
@@ -26,6 +26,8 @@ $bg-type-blue: var(--color-base0C);
 $bg-type-yellow: var(--color-yellow);
 $bg-type-red: var(--color-red);
 
+$element-border: 1px solid var(--color-table-border2);
+
 .kui--status-stripe {
   display: flex;
   flex-basis: 2.25rem;
@@ -122,13 +124,16 @@ $bg-type-red: var(--color-red);
       padding-left: calc(1rem * 0.875 / 0.75);
       padding-right: 1rem;
     }
+    .kui--status-stripe-element-wrapper:not(:first-child),
     .kui--status-stripe-element:not(:first-child) {
-      border-left: 1px solid var(--color-table-border3);
+      border-left: $element-border;
+    }
+    .kui--status-stripe-element:not(:first-child) {
       padding-left: 1rem;
     }
   }
   .kui--status-stripe-button {
-    border-left: 1px solid var(--color-table-border3);
+    border-left: $element-border;
   }
   .kui--status-stripe-meter {
     font-size: $font-size;
@@ -136,8 +141,8 @@ $bg-type-red: var(--color-red);
     .kui--status-stripe-element {
       padding-right: 1rem;
       padding-left: 1rem;
-      border-left: 1px solid var(--color-table-border3);
-      border-right: 1px solid var(--color-table-border3);
+      border-left: $element-border;
+      border-right: $element-border;
 
       &.kui--status-stripe-tag-element {
         padding-left: 0;
@@ -191,7 +196,7 @@ $bg-type-red: var(--color-red);
     bottom: 1.875rem;
     left: 0;
     background-color: var(--color-sidecar-background-01);
-    border-bottom: 1px solid var(--color-table-border3);
+    border-bottom: $element-border;
     z-index: 100;
 
     .kui--tab-completions--option .bx--btn--primary:focus {
